syntax = "proto3";
package influxdata.iox.column_type.v1;
option go_package = "github.com/influxdata/iox/column_type/v1";

enum ColumnType {
  COLUMN_TYPE_UNSPECIFIED = 0;
  COLUMN_TYPE_I64 = 1;
  COLUMN_TYPE_U64 = 2;
  COLUMN_TYPE_F64 = 3;
  COLUMN_TYPE_BOOL = 4;
  COLUMN_TYPE_STRING = 5;
  COLUMN_TYPE_TIME = 6;
  COLUMN_TYPE_TAG = 7;
}
